<resources>
    <string name="app_name">医直达</string>

    <string name="request_fail">请求失败</string>

    <!-- 登录 -->
    <string name="log_out">注销</string>
    <string name="login">登录</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="logining">正在登录</string>
    <string name="request_error">请求异常</string>
    <string name="password_of_account">帐号密码</string>
    <string name="log_out_text">退出登录</string>
    <string name="invalid_password">密码错误</string>

    <!-- 挂号 -->
    <string name="register">挂号</string>
    <string name="phone_number">手机</string>
    <string name="birthday_no_more_than_today">生日不能大于今天!</string>
    <string name="choose_birthday">请选择生日</string>
    <string name="choose_gender">请选择性别</string>
    <string name="add">添加</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="refill">重填</string>

    <!-- 收银 -->
    <string name="pending_settlement">待结算</string>
    <string name="close_settlement">已结算</string>
    <string name="no_pending_settlement_data">无待结算账单</string>
    <string name="no_close_settlement_data">无已结算账单</string>
    <string name="receivable_fee">应收</string>
    <string name="receivable_fee_asterisk">应收:</string>
    <string name="already_pay">已收</string>
    <string name="already_pay_asterisk">已收:</string>
    <string name="real_fee">实收</string>
    <string name="real_fee_asterisk">实收:</string>
    <string name="real_refund">实退</string>
    <string name="cash_charge">现金收费</string>
    <string name="change">找零</string>
    <string name="cash_insufficient">现金收费不足</string>
    <string name="settlement">结算</string>
    <string name="settlement_formula">(实收=应收-优惠)</string>
    <string name="coupon">优惠</string>
    <string name="makeup">补差: </string>
    <string name="confirm_charge">确认收费</string>
    <string name="confirm_refund">确认退款</string>
    <string name="close">关闭</string>
    <string name="yuan">元</string>

    <!-- 挂号成功对话框 -->
    <string name="dialog_regist_success">成功挂号</string>
    <string name="dialog_regist_wait_people">前面等待人数：%d人</string>

    <!-- 通用文字,频繁使用文字 -->
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>

    <!-- 更新 -->
    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
</resources>
