<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <RelativeLayout
        android:id="@+id/head_layout"
        android:layout_width="match_parent"
        android:layout_height="160px"
        android:background="@drawable/top_bg1">

        <TextView
            android:id="@+id/head_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/register"
            android:textColor="#FFFFFF"
            android:textSize="70px"/>

        <TextView
            android:id="@+id/tv_log_out"
            android:layout_width="220px"
            android:layout_height="200px"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10px"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/log_out"
            android:textColor="#FFFFFF"
            android:textSize="55px"/>
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/btn_confirm"
        android:layout_below="@+id/head_layout"
        android:focusable="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="-1dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/box3_nor"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="15dp">

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/receivable_fee"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tv_receivable_fee"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="20dp"
                android:background="@null"
                android:ems="10"
                android:gravity="center_vertical"
                android:hint="0.00元"
                android:onClick="onClick"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="18sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llt_already_pay"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="-1dp"
            android:background="@drawable/box3_nor"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="15dp">

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/already_pay"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tv_already_pay"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="20dp"
                android:background="@null"
                android:ems="10"
                android:gravity="center_vertical"
                android:onClick="onClick"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="18sp"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/llt_coupon"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="-1dp"
            android:background="@drawable/box3_nor"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="15dp">

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/coupon"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tv_coupon"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="20dp"
                android:background="@null"
                android:ems="10"
                android:gravity="center_vertical"
                android:onClick="onClick"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="18sp"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="-1dp"
            android:background="@drawable/box3_nor"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="15dp">

            <TextView
                android:id="@+id/tv_real_fee"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:paddingLeft="8dp"
                android:text="@string/real_fee"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tv_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/et_real_fee"
                android:text="-"
                android:textSize="20sp"
                android:visibility="invisible"/>


            <EditText
                android:id="@+id/et_real_fee"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/tv_real_fee"
                android:layout_weight="1"
                android:background="@null"
                android:ems="10"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:onClick="onClick"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/settlement_formula"/>

        <LinearLayout
            android:id="@+id/llt_cash_charge"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="-1dp"
            android:background="@drawable/box3_nor"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="15dp">

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/cash_charge"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/et_cash_charge"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:background="@null"
                android:ems="10"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:onClick="onClick"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llt_change"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="-1dp"
            android:background="@drawable/box3_nor"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="15dp">

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/change"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tv_change"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="20dp"
                android:background="@null"
                android:ems="10"
                android:gravity="center_vertical"
                android:onClick="onClick"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                />
        </LinearLayout>

    </LinearLayout>


    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/selector_btn_bg_blue_swell"
        android:onClick="onClick"
        android:text="@string/confirm_charge"
        android:textColor="@color/color_ffffff"
        android:textSize="22sp"/>
</RelativeLayout>